@@ -144,7 +144,8 @@ feel of the primitives to your preferred style.
 Keyboard Shortcuts
 
 Widgets use keyboard shortcuts (a.k.a. keybindings) such as arrow keys and
-H/J/k/L by default. You may override these shortcuts globally by setting a
+H/J/k/L by default. You may replace these defaults by modifying the keybindings
+listed in Keys. You may also override keyboard shortcuts globally by setting a
 handler with Application.SetInputCapture.
 
 cbind is a library which simplifies adding support for custom keybindings to
