@@ -7,6 +7,6 @@ require (
 	github.com/lucasb-eyer/go-colorful v1.0.3
 	github.com/mattn/go-runewidth v0.0.9
 	github.com/rivo/uniseg v0.1.0
-	golang.org/x/sys v0.0.0-20200509044756-6aff5f38e54f // indirect
-	golang.org/x/text v0.3.2 // indirect
+	gitlab.com/tslocum/cbind v0.1.1
+	golang.org/x/sys v0.0.0-20200515095857-1151b9dac4a9 // indirect
 )
