@@ -9,6 +9,7 @@ import (
 	"github.com/gdamore/tcell"
 	runewidth "github.com/mattn/go-runewidth"
 	"github.com/rivo/uniseg"
+	"gitlab.com/tslocum/cbind"
 )
 
 // Text alignment within a box.
@@ -693,4 +694,20 @@ func RenderScrollBar(screen tcell.Screen, visibility ScrollBarVisibility, x int,
 		}
 	}
 	Print(screen, scrollBar, x, y, 1, AlignLeft, color)
+}
+
+// matchesKeys returns whether the EventKey is present in the list of keybinds.
+func matchesKeys(event *tcell.EventKey, keybinds []string) bool {
+	enc, err := cbind.Encode(event.Modifiers(), event.Key(), event.Rune())
+	if err != nil {
+		return false
+	}
+
+	for _, k := range keybinds {
+		if k == enc {
+			return true
+		}
+	}
+
+	return false
 }
