@@ -1,5 +1,6 @@
 v1.4.6 (WIP)
 - Add Box.ShowFocus
+- Add Keys to allow default keybindings to be modified
 - Add List.GetOffset, List.SetOffset and List.SetSelectedTextAttributes
 - Add TextView.SetMaxLines
 - Add Vim-style keybindings to List
